fix: permisos de registro admin, limpieza de sesion en frontend y ajustes de despliegue